@@ -54,9 +54,10 @@
 - Consider using Test::Number::Delta for many tests
 
 - More tweaking of LMO prime count.
-    - Consider using UV size for sieve
-    - is there any way to see if we could safely use asm popcnt?
     - OpenMP.  The step 7 inner loop is available.
     - Convert to 32-bit+GMP to support large inputs, add to MPU::GMP.
+    - Try __int128.
+    - Variable sieve size
+    - look at sieve.c style prime walking
 
 - Add Inverse Li and Legendre Phi to API?
